feat (model): add tag methods
